--- a/app/views/blocks/header.pug
+++ b/app/views/blocks/header.pug
@@ -1,15 +1,15 @@
 header.main-header
 	.container.py-4.py-xl-3
-		.row.align-items-center.justify-content-between
-			.col-auto.d-block.d-xl-none
+		.row.align-items-center.justify-content-between.flex-nowrap
+			.col-auto.d-block.d-xl-none.pr-0
 				button(class="btn btn-icon btn-open-menu")
 					//- img(src="./images/icons/bars-icon.png", alt="" class="icon-open")
 					i.far.fa-grip-lines.icon-open
 					i.far.fa-times.icon-close
 			.col-auto.col-xl-3 
 				a.logo(href="./index.html")
-					img(src="./images/logo.png", alt="Logo" class="logo-desktop")
-					//- img(src="./images/logo-no-text-gradient.png", alt="Logo" class="logo-mobile d-block d-xl-none")
+					img(src="./images/logo.png", alt="Logo" class="logo-desktop d-none d-xl-block")
+					img(src="./images/logo-mobile.png", alt="Logo" class="logo-mobile d-block d-xl-none")
 			.col-12.col-xl-5.d-none.d-xl-block
 				.bread-crumbs.d-flex.flex-column 
 					h6.title-page SOLMINT
