--- a/app/styles/styles.scss
+++ b/app/styles/styles.scss
@@ -439,8 +439,9 @@ body.token-creator .sidebar-left .navbar-menu-left .menu-support {
                     background: rgba(239, 242, 244, 1);
                     border-radius: 4px;
                     &:hover {
+                        background: var(--text-purple);
                         img {
-                            filter: brightness(0) saturate(100%) invert(30%) sepia(66%) saturate(1945%) hue-rotate(243deg) brightness(78%) contrast(91%);
+                            filter: brightness(0) saturate(100%) invert(100%) sepia(0%) saturate(0%) hue-rotate(93deg) brightness(103%) contrast(103%);                        
                         }
                     }
                 }
@@ -609,9 +610,9 @@ body.home-page {
                     background: rgba(239, 242, 244, 1);
                     border-radius: 4px;
                     &:hover {
+                        background: var(--text-purple);
                         img {
-                            filter: brightness(0) saturate(100%) invert(30%) sepia(66%) saturate(1945%) hue-rotate(243deg) brightness(78%) contrast(91%);
-                        }
+                            filter: brightness(0) saturate(100%) invert(100%) sepia(0%) saturate(0%) hue-rotate(93deg) brightness(103%) contrast(103%);                        }
                     }
                 }
             }
