--- a/public/styles/styles.css
+++ b/public/styles/styles.css
@@ -583,9 +583,11 @@ body.token-creator .sidebar-left .navbar-menu-left .menu-support {
           justify-content: center;
           background: #eff2f4;
           border-radius: 4px; }
-          .sidebar-left .navbar-menu-left .menu-support .support-socials a:hover img {
-            -webkit-filter: brightness(0) saturate(100%) invert(30%) sepia(66%) saturate(1945%) hue-rotate(243deg) brightness(78%) contrast(91%);
-            filter: brightness(0) saturate(100%) invert(30%) sepia(66%) saturate(1945%) hue-rotate(243deg) brightness(78%) contrast(91%); }
+          .sidebar-left .navbar-menu-left .menu-support .support-socials a:hover {
+            background: var(--text-purple); }
+            .sidebar-left .navbar-menu-left .menu-support .support-socials a:hover img {
+              -webkit-filter: brightness(0) saturate(100%) invert(100%) sepia(0%) saturate(0%) hue-rotate(93deg) brightness(103%) contrast(103%);
+              filter: brightness(0) saturate(100%) invert(100%) sepia(0%) saturate(0%) hue-rotate(93deg) brightness(103%) contrast(103%); }
       .sidebar-left .navbar-menu-left .menu-support .support-languagues .nav-tabs {
         border-radius: 4px;
         background: #f1f5f9;
@@ -745,9 +747,11 @@ body.home-page .home-page-section {
         justify-content: center;
         background: #eff2f4;
         border-radius: 4px; }
-        body.home-page .home-page-section .home-banner .support-socials a:hover img {
-          -webkit-filter: brightness(0) saturate(100%) invert(30%) sepia(66%) saturate(1945%) hue-rotate(243deg) brightness(78%) contrast(91%);
-          filter: brightness(0) saturate(100%) invert(30%) sepia(66%) saturate(1945%) hue-rotate(243deg) brightness(78%) contrast(91%); }
+        body.home-page .home-page-section .home-banner .support-socials a:hover {
+          background: var(--text-purple); }
+          body.home-page .home-page-section .home-banner .support-socials a:hover img {
+            -webkit-filter: brightness(0) saturate(100%) invert(100%) sepia(0%) saturate(0%) hue-rotate(93deg) brightness(103%) contrast(103%);
+            filter: brightness(0) saturate(100%) invert(100%) sepia(0%) saturate(0%) hue-rotate(93deg) brightness(103%) contrast(103%); }
 
 .content-background-center {
   background-image: url("../images/main-bg-2.png");
