--- a/app/views/token-creator.pug
+++ b/app/views/token-creator.pug
@@ -2,7 +2,7 @@ extends layout/layout
 
 block vars
 	-title = 'Bee Bee'
-	-bodyClass = 'content-page token-creator'
+	-bodyClass = 'content-page '
 	-page= 'token-creator'
 	-pageName= 'Token Creator'
 
