--- a/app/styles/styles.scss
+++ b/app/styles/styles.scss
@@ -217,17 +217,19 @@ linear-gradient(0deg, rgba(0, 0, 0, 0.2), rgba(0, 0, 0, 0.2));
 
 .sidebar-left {
     width: 265px;
-    @media only screen and (min-width:1200px) {
-        height: 100%;
-        display: flex;
-        flex-direction: column;
-        justify-content: space-between;
-    }
+    height: 100%;
+   
     .navbar-menu-left {
         padding: 0px;
         display: block;
         width: 100%;
         // margin-bottom: 100px;
+        @media only screen and (min-width:1200px) {
+            height: 100%;
+            display: flex;
+            flex-direction: column;
+            justify-content: space-between;
+        }
         .navbar-wrapper {
             // Menu Level 1
             .navbar-item {
@@ -386,11 +388,12 @@ linear-gradient(0deg, rgba(0, 0, 0, 0.2), rgba(0, 0, 0, 0.2));
                 opacity: 1;
                 visibility: visible;
                 z-index: 5;
+                overflow-y: auto;
             }
 
             .navbar-wrapper {
-                height: 90vh;
-                overflow-y: auto;
+                height: auto;
+                // overflow-y: auto;
             }
         }
 
