update code navbar

--- a/app/views/blocks/navbar.pug
+++ b/app/views/blocks/navbar.pug
@@ -117,35 +117,35 @@
 
 		//- Snipe Block-0
 		li.navbar-item.dropdown
-			a.navbar-link(href="#!")
+			a.navbar-link(href="#!" class="text-gray")
 				span.icon 
 					i.ti.ti-building-store
 				| Snipe Block-0
 		
 		//- Bee TradingBot
 		li.navbar-item.dropdown
-			a.navbar-link(href="#!")
+			a.navbar-link(href="#!" class="text-gray")
 				span.icon 
 					i.ti.ti-robot
 				| Bee TradingBot
 
 		//- Deployer Auto Bot
 		li.navbar-item.dropdown
-			a.navbar-link(href="#!")
+			a.navbar-link(href="#!" class="text-gray")
 				span.icon 
 					i.ti.ti-battery-automotive
 				| Deployer Auto Bot
 
 		//- NFT
 		li.navbar-item.dropdown
-			a.navbar-link(href="#!")
+			a.navbar-link(href="#!" class="text-gray")
 				span.icon 
 					i.ti.ti-photo-heart
 				| NFT Management
 
 		//- Bee Fun
 		li.navbar-item.dropdown
-			a.navbar-link(href="#!")
+			a.navbar-link(href="#!" class="text-gray")
 				span.icon 
 					i.ti.ti-mood-happy
 				| Bee Fun
