--- a/app/styles/styles.scss
+++ b/app/styles/styles.scss
@@ -241,11 +241,15 @@ linear-gradient(0deg, rgba(0, 0, 0, 0.2), rgba(0, 0, 0, 0.2));
                     color: var(--text-black);
                     font-size: 14px;
                     line-height: 20px;
-                    font-weight: 400;
+                    font-weight: 500;
                     cursor: pointer;
                     text-decoration: none;
                     margin-top: 8px;
                     padding: 2px 15px 2px 3px;
+
+                    &.text-gray {
+                        color: #747474;
+                    }
 
                     &:hover,
                     &.active,
@@ -501,11 +505,13 @@ body.home-page {
         background-image: none;
     }
     
-    .menu-section {
-        @media only screen and (min-width:1200px) {
-            height: 100vh;
-        }
-    }
+    // .menu-section {
+    //     @media only screen and (min-width:1200px) {
+    //         height: 100vh;
+    //         overflow-x: hidden;
+    //         overflow-y: auto;
+    //     }
+    // }
 
     
 
